View Issue Details

IDProjectCategoryView StatusLast Update
0026312CommunityOCCT:Visualizationpublic2016-04-20 15:48
ReporterVico Liang Assigned Tobugmaster  
PrioritynormalSeveritymajor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2013 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026312: ColorScale doesn't work as expected.
DescriptionThe background is to show the ColorScale in all the views contained in a Viewer.
If the option ffpEnabe is set as false, The ColorScale just display an RED inteval.
Handle(OpenGl_GraphicDriver)::DownCast(myGraphicDriver)->ChangeOptions().ffpEnable = Standard_False;

If ffpEnable is true and there is multiple views in a vierer, the ColorScale display in views has serious issue, please see the picture for details.


Code snippets to show the issue:
    for (aViewer->InitActiveViews(); aViewer->MoreActiveViews(); aViewer->NextActiveViews())
    {
        Handle(V3d_View) aView = aViewer->ActiveView();
        Handle(Aspect_ColorScale) aCSV = aView->ColorScale();
        Handle(V3d_ColorScale) aCS = (Handle(V3d_ColorScale)::DownCast(aCSV));
        if (!aCS.IsNull())
        {
            aCS->SetColorType(Aspect_TOCSD_USER);
            aCS->SetLabelType(Aspect_TOCSD_AUTO);
            aCS->SetLabelPosition(Aspect_TOCSP_RIGHT);
            aCS->SetTitle(RBKTools::ToExtString(aCategoryName));
            aCS->SetHeight(0.85);
            aCS->SetPosition(0, 0);
            aCS->SetRange(aInterval.GetMin(), aInterval.GetMax());
            aCS->SetColors(aColorMap);
            aCS->SetNumberOfIntervals(aNbColors);
            aCS->SetFormat("%.4e");
            if (!aView->ColorScaleIsDisplayed())
            {
                aView->ColorScaleDisplay();
            }
        }
    }
    aViewer->Update();
TagsNo tags attached.
Test case numberbugs vis bug26312

Attached Files

  • ColorScaleBug.png (24,079 bytes)
  • ColorScaleBug_1.png (2,172 bytes)

Relationships

related to 0025785 closedski Open CASCADE Visualization - introduce AIS_ColorScale presentation for Color Scale 
related to 0026238 closedbugmaster Community Visualization - flicking when draw dynamic AIS object on Radeon 

Activities

Vico Liang

2015-06-04 10:31

developer  

ColorScaleBug.png (24,079 bytes)

Vico Liang

2015-06-04 10:45

developer  

ColorScaleBug_1.png (2,172 bytes)

git

2015-09-08 14:31

administrator   ~0045224

Branch CR26312 has been created by isz.

SHA-1: df25cc4efd2c83c34f6a9114a00738f8fa2a7fc5


Detailed log of new commits:

Author: isz
Date: Tue Sep 8 14:31:09 2015 +0300

    0026312: ColorScale doesn't work as expected.
    
    Now 'vcolorscale' command works correctly with the active view. Test case is added.

git

2015-09-24 16:04

administrator   ~0046094

Branch CR26312 has been updated forcibly by isz.

SHA-1: 183436925298e75da759b81bbb134c63e771550f

git

2015-09-24 17:06

administrator   ~0046096

Branch CR26312_1 has been created by isz.

SHA-1: c22dd1b361a610ce3124183d2d792217c59a4080


Detailed log of new commits:

Author: isz
Date: Thu Sep 24 17:06:35 2015 +0300

    0026312: ColorScale doesn't work as expected.
    
    Now 'vcolorscale' command works correctly with the active view. Added options to set the width or the height of color scale explicitly. Test case is added.

git

2015-09-25 15:42

administrator   ~0046138

Branch CR26312_1 has been updated forcibly by isz.

SHA-1: b216891e797e845230ffd5b24328fb462ea4b967

kgv

2015-09-25 21:16

developer   ~0046178

Please test the patch in branch CR26312_1.

git

2015-09-28 15:03

administrator   ~0046220

Branch CR26312_1 has been updated forcibly by apv.

SHA-1: 3e7e4a14186097c9acaa538096ca96e46a2375c5

apv

2015-09-28 15:04

tester   ~0046221

Branch CR26312_1 has been rebased on the current master

apv

2015-09-29 15:28

tester   ~0046264

Dear BugMaster,

Branch CR26312_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: 3e7e4a14186097c9acaa538096ca96e46a2375c5

Number of compiler warnings:
occt component:
   Linux: 16 (13 on master)
   Windows: 2 (0 on master)
products component:
   Linux: 39 (39 on master)
   Windows: 0 (0 on master)
There are new additional warnings
on Linux:
1. AIS_ColorScale.hxx:278, GNU C Compiler 4 (gcc), Priority: Normal
'Quantity_Color AIS_ColorScale::myBgColor' [-Wreorder]
2. AIS_ColorScale.hxx:279, GNU C Compiler 4 (gcc), Priority: Normal
'AIS_ColorScale::myTextHeight' will be initialized after [-Wreorder]
3. AIS_ColorScale.cxx:46, GNU C Compiler 4 (gcc), Priority: Normal
when initialized here [-Wreorder]
on Windows:
1. AIS_ColorScale.cxx:569, MSBuild, Priority: Normal
'argument' : conversion from 'Standard_Real' to 'const Standard_Integer', possible loss of data
2. AIS_ColorScale.cxx:613, MSBuild, Priority: Normal
'initializing' : conversion from 'Standard_Real' to 'Standard_Integer', possible loss of data

Regressions/Differences:
Not detected

Testing cases:
bugs vis bug26312 - OK
http://occt-tests/CR26312-1-master-occt-64/Debian70-64/bugs/vis/bug26312.html
http://occt-tests/CR26312-1-master-occt-64/Windows-64-VC10/bugs/vis/bug26312.html

Testing on Linux:
Total MEMORY difference: 93077468 / 93320383 [-0.26%]
Total CPU difference: 19712.509999999336 / 19848.969999999237 [-0.69%]

Testing on Windows:
Total MEMORY difference: 57933191 / 57934651 [-0.00%]
Total CPU difference: 17607.661268899028 / 17727.329635999078 [-0.68%]

There are differences in images found by testdiff:
http://occt-tests/CR26312-1-master-occt-64/Debian70-64/diff-Debian70-64.html
http://occt-tests/CR26312-1-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html
bugs vis bug12584

apv

2015-09-29 15:30

tester   ~0046265

Dear isz,

Branch CR26312_1 has been rejected due to:
- additional warnings
- differences in images

git

2015-09-30 17:31

administrator   ~0046343

Branch CR26312_1 has been updated forcibly by isz.

SHA-1: a0003b00519806703dc0965c9fed4729a6ee34a4

git

2015-10-01 12:39

administrator   ~0046362

Branch CR26312_2 has been created by isz.

SHA-1: 1a40d09ff1015dbe2bd80554ac74a661febf8cc6


Detailed log of new commits:

Author: isz
Date: Thu Oct 1 12:39:04 2015 +0300

    0026312: ColorScale doesn't work as expected.
    
    Now 'vcolorscale' command works correctly with the active view. Added options to set the width or the height of color scale explicitly. Test case is added.

isz

2015-10-01 12:55

developer   ~0046364

Dear Kirill,
Please review branch CR26312_2.

kgv

2015-10-05 16:16

developer   ~0046479

-  Standard_Real myXPos;
-  Standard_Real myYPos;
-  Standard_Real myWidth;
-  Standard_Real myHeight;
+  Standard_Integer myXPos;
+  Standard_Integer myYPos;
+  Standard_Integer myWidth;
+  Standard_Integer myHeight;
...
+  aCS->SetPosition          ((Standard_Integer) aPos.X(), (Standard_Integer) aPos.Y());

Could you please check consistency in computation code of Draw Harness and AIS_ColorScale taking into account this type change? For instance, aPos in Draw is still vector of reals, and converted into integers.

git

2015-10-06 12:18

administrator   ~0046494

Branch CR26312_2 has been updated forcibly by isz.

SHA-1: a448dfbbeb9b8f039ed49d6522a6408403f9a9bf

git

2015-10-06 12:39

administrator   ~0046495

Branch CR26312_3 has been created by isz.

SHA-1: 3835eb6c5f123d834957844ec2a890e1d1bd1483


Detailed log of new commits:

Author: isz
Date: Tue Oct 6 12:30:13 2015 +0300

    0026312: ColorScale doesn't work as expected.
    
    Now 'vcolorscale' command works correctly with the active view. Changed types of some variables from Standard_Real to Standard_Integer. Added options to set the width or the height of color scale explicitly. Test case is added.

isz

2015-10-06 12:40

developer   ~0046496

Dear Kirill,
Please review branch CR26312_3.

kgv

2015-10-06 12:43

developer   ~0046497

Please test the patch.

apv

2015-10-07 12:54

tester   ~0046551

Dear BugMaster,

Branch CR26312_3 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: 3835eb6c5f123d834957844ec2a890e1d1bd1483

Number of compiler warnings:
occt component:
   Linux: 16 (13 on master)
   Windows: 0 (0 on master)
products component:
   Linux: 39 (39 on master)
   Windows: 0 (0 on master)
There are new additional warnings on Linux:
1. AIS_ColorScale.hxx:278, GNU C Compiler 4 (gcc), Priority: Normal
'Quantity_Color AIS_ColorScale::myBgColor' [-Wreorder]
2. AIS_ColorScale.hxx:279, GNU C Compiler 4 (gcc), Priority: Normal
'AIS_ColorScale::myTextHeight' will be initialized after [-Wreorder]
3. AIS_ColorScale.cxx:46, GNU C Compiler 4 (gcc), Priority: Normal
when initialized here [-Wreorder]

Regressions/Differences:
Not detected

Testing cases:
bugs vis bug26312 - OK
http://occt-tests/CR26312-3-master-occt-64/Debian70-64/bugs/vis/bug26312.html
http://occt-tests/CR26312-3-master-occt-64/Windows-64-VC10/bugs/vis/bug26312.html

Testing on Linux:
Total MEMORY difference: 92389430 / 92317965 [+0.08%]
Total CPU difference: 19758.999999999625 / 19581.669999999736 [+0.91%]

Testing on Windows:
Total MEMORY difference: 58080566 / 58090988 [-0.02%]
Total CPU difference: 18267.85750089905 / 18228.91965129895 [+0.21%]

There are differences in images found by testdiff:
http://occt-tests/CR26312-3-master-occt-64/Debian70-64/diff-Debian70-64.html
http://occt-tests/CR26312-3-master-occt-64/Windows-64-VC10/diff-Windows-64-VC10.html
bugs vis bug12584

apv

2015-10-07 12:55

tester   ~0046552

Dear isz,

Branch CR26312_3 has been rejected due to:
- additional warnings
- differences in images

git

2015-10-07 16:01

administrator   ~0046569

Branch CR26312_3 has been updated forcibly by isz.

SHA-1: 5d1070a9e5ce2e9b401950050bc6332c6bf00ff5

kgv

2015-10-07 18:01

developer   ~0046575

Please test updated patch.

apv

2015-10-08 12:23

tester   ~0046586

Dear BugMaster,

Branch CR26312_3 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested.
SHA-1: 5d1070a9e5ce2e9b401950050bc6332c6bf00ff5

Number of compiler warnings:
occt component:
   Linux: 13 (13 on master)
   Windows: 0 (0 on master)
products component:
   Linux: 39 (39 on master)
   Windows: 0 (0 on master)

Regressions/Differences:
Not detected

Testing cases:
bugs vis bug26312 - OK
http://occt-tests/CR26312-3-master-occt-64/Debian70-64/bugs/vis/bug26312.html
http://occt-tests/CR26312-3-master-occt-64/Windows-64-VC10/bugs/vis/bug26312.html

Testing on Linux:
Total MEMORY difference: 92387517 / 92319528 [+0.07%]
Total CPU difference: 19572.899999999772 / 19581.759999999736 [-0.05%]

Testing on Windows:
Total MEMORY difference: 58082500 / 58088925 [-0.01%]
Total CPU difference: 18306.982551699068 / 18228.68564979895 [+0.43%]

git

2015-10-16 16:14

administrator   ~0046880

Branch CR26312 has been deleted by kgv.

SHA-1: 183436925298e75da759b81bbb134c63e771550f

git

2015-10-16 16:17

administrator   ~0046895

Branch CR26312_1 has been deleted by kgv.

SHA-1: a0003b00519806703dc0965c9fed4729a6ee34a4

git

2015-10-16 16:17

administrator   ~0046896

Branch CR26312_2 has been deleted by kgv.

SHA-1: a448dfbbeb9b8f039ed49d6522a6408403f9a9bf

git

2015-10-16 16:17

administrator   ~0046897

Branch CR26312_3 has been deleted by kgv.

SHA-1: 5d1070a9e5ce2e9b401950050bc6332c6bf00ff5

Related Changesets

occt: master b4b2ecca

2015-10-07 13:01:13

isz


Committer: bugmaster Details Diff
0026312: ColorScale doesn't work as expected.

Now 'vcolorscale' command works correctly with the active view. Changed types of some variables from Standard_Real to Standard_Integer. Added options to set the width or the height of color scale explicitly. Test case is added.
Affected Issues
0026312
mod - src/AIS/AIS_ColorScale.cxx Diff File
mod - src/AIS/AIS_ColorScale.hxx Diff File
mod - src/QABugs/QABugs_11.cxx Diff File
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx Diff File
add - tests/bugs/vis/bug26312 Diff File

Issue History

Date Modified Username Field Change
2015-06-04 10:27 Vico Liang New Issue
2015-06-04 10:27 Vico Liang Assigned To => kgv
2015-06-04 10:29 kgv Relationship added related to 0025785
2015-06-04 10:31 Vico Liang File Added: ColorScaleBug.png
2015-06-04 10:45 Vico Liang File Added: ColorScaleBug_1.png
2015-06-04 10:45 Vico Liang Relationship added related to 0026238
2015-08-20 14:18 kgv Assigned To kgv => isz
2015-08-20 14:18 kgv Status new => assigned
2015-09-08 14:31 git Note Added: 0045224
2015-09-24 16:04 git Note Added: 0046094
2015-09-24 17:06 git Note Added: 0046096
2015-09-25 15:42 git Note Added: 0046138
2015-09-25 21:16 kgv Note Added: 0046178
2015-09-25 21:16 kgv Assigned To isz => bugmaster
2015-09-25 21:16 kgv Status assigned => resolved
2015-09-25 21:16 kgv Status resolved => reviewed
2015-09-28 14:24 apv Assigned To bugmaster => apv
2015-09-28 15:03 git Note Added: 0046220
2015-09-28 15:04 apv Note Added: 0046221
2015-09-29 14:40 apv Test case number => bugs vis bug26312
2015-09-29 15:28 apv Note Added: 0046264
2015-09-29 15:28 apv Assigned To apv => isz
2015-09-29 15:28 apv Status reviewed => assigned
2015-09-29 15:30 apv Note Added: 0046265
2015-09-30 17:31 git Note Added: 0046343
2015-10-01 12:39 git Note Added: 0046362
2015-10-01 12:54 isz Assigned To isz => Vico Liang
2015-10-01 12:54 isz Assigned To Vico Liang => kgv
2015-10-01 12:55 isz Note Added: 0046364
2015-10-05 16:16 kgv Note Added: 0046479
2015-10-05 16:16 kgv Assigned To kgv => isz
2015-10-06 12:18 git Note Added: 0046494
2015-10-06 12:39 git Note Added: 0046495
2015-10-06 12:40 isz Assigned To isz => kgv
2015-10-06 12:40 isz Note Added: 0046496
2015-10-06 12:43 kgv Note Added: 0046497
2015-10-06 12:43 kgv Assigned To kgv => bugmaster
2015-10-06 12:43 kgv Status assigned => resolved
2015-10-06 12:43 kgv Status resolved => reviewed
2015-10-06 12:49 apv Assigned To bugmaster => apv
2015-10-07 12:54 apv Note Added: 0046551
2015-10-07 12:54 apv Assigned To apv => isz
2015-10-07 12:54 apv Status reviewed => assigned
2015-10-07 12:55 apv Note Added: 0046552
2015-10-07 16:01 git Note Added: 0046569
2015-10-07 18:01 kgv Note Added: 0046575
2015-10-07 18:01 kgv Assigned To isz => bugmaster
2015-10-07 18:01 kgv Status assigned => resolved
2015-10-07 18:01 kgv Status resolved => reviewed
2015-10-07 18:32 mkv Assigned To bugmaster => apv
2015-10-08 12:23 apv Note Added: 0046586
2015-10-08 12:23 apv Assigned To apv => bugmaster
2015-10-08 12:23 apv Status reviewed => tested
2015-10-09 15:22 bugmaster Changeset attached => occt master b4b2ecca
2015-10-09 15:22 bugmaster Status tested => verified
2015-10-09 15:22 bugmaster Resolution open => fixed
2015-10-16 16:14 git Note Added: 0046880
2015-10-16 16:17 git Note Added: 0046895
2015-10-16 16:17 git Note Added: 0046896
2015-10-16 16:17 git Note Added: 0046897
2016-04-20 15:44 aiv Fixed in Version => 7.0.0
2016-04-20 15:48 aiv Status verified => closed